--- a/circuit-breaker/circuit/src/main/resources/application.yml
+++ b/circuit-breaker/circuit/src/main/resources/application.yml
@@ -1,16 +1,3 @@
-#resilience4j:
-#  circuitbreaker:
-#    instances:
-#      circuitBreaker:
-#        registerHealthIndicator: true
-#        automaticTransitionFromOpenToHalfOpenEnabled: true
-#        failureRateThreshold: 50
-#        minimumNumberofCalls: 2
-#        permittedNumberOfCallsInHalfOpenState: 3
-#        slidingWindowSize: 10
-#        waitDurationInOpenState: 10
-#        slidingWindowType: COUNT_BASED
-
 resilience4j.circuitbreaker:
   configs:
     default:
@@ -24,5 +11,5 @@ resilience4j.circuitbreaker:
       minimumNumberOfCalls: 5
       waitDurationInOpenState: 10000
   instances:
-    hello:
+    customCircuitBreaker:
       baseConfig: default
